	
	- Removed the need for the 'DATA' key due to above parsing improvements. All input now creates a key
	in the appropriate hash.

	- Manager lines with empty values ( e.g. 'Account: ' in an event) are no longer placed
	in 'DATA' and are instead parsed properly and contain the null string as a value ( test for '' ).

	- Added documentation examples for the Originate Action

	- Update documenation
0.1.10
	- Added exception for the 'Originate' command while using the 'Async' option.

	- Added option 'OriginateHack', which makes changes to allow using the 'Originate' action with the 'Async'
	option.
	
	- Added new subroutine 'loop', calls an event loop via AnyEvent.

0.1.9
	- Fixed a bug when the cli command 'database show' was used with a small asterisk database (single entry)
	that would cause the response to not be parsed correctly, causing it to never complete. Also affected
	AMI::Common::db_show();

	- Fixing some of our OO implementation to make it more correct and to properly isolate seperate 
	instances of our object from each other

	- Now after calling destroy() any further calls to methods on that object will simple fail

	- Optimized the regex and method used for splitting 'Action: Command' output

	- Cleaned up some logic in a few subroutines

	- Fixed some more typos in the documentation

0.1.8
	- Added support for 'MD5' challenge authenticaiton

	- Added SSL support

	- Internal changes to how we keep track of active actions

	- Fixed some bad grammar/spelling/typos in documentation,
	most likely added a few more as well

0.1.7

	- Removed Asterisk::AMI::completed(). Seemed pointless with callbacks.

	- Added TCP_Keepalive option, enables socket level TCP keepalive for detecting dead connections.

	- Fixed possible undefined value for timeout when sending a keepalive.

	- We were being a bit overzealous when we encounted an error on the socket (during connect or otherwise).